--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "bcryptjs": "^2.4.3",
-    "datepicker": "^0.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-map-gl": "^7.1.7",
