--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.2.4",
     "mqtt": "^5.5.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "socket.io": "^4.5.4",
