--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "git-filter-repo": "^0.0.30",
     "json2csv": "^6.0.0-alpha.2",
     "leaflet": "^1.9.4",
     "mongoose-gridfs": "^1.3.0",
@@ -19,6 +21,7 @@
     "react-hook-form": "^7.42.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
