--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,8 @@ PORT=4444
 DB_URL=mongodb+srv://infoebhoom:infoebhoom@aquabox.ipz6szz.mongodb.net/
 SECRET_KEY=forgot_PasswordEbhoomAquaboxApplication
 SALT=10
-
+ACCOUNTSID= AC16116151f40f27195ca7e326ada5cb83
+AUTHTOKEN = d7ea43981a772f6b6c9bddb41a6a87ff
 PHONE_NUMBER = +14423428965
 EMAIL="info.ebhoom@gmail.com"
 PASSWORD="xglq gsxu dptv izra"
