--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@ AUTHTOKEN =d7ea43981a772f6b6c9bddb41a6a87ff
 PHONE_NUMBER =+14423428965
 EMAIL="info.ebhoom@gmail.com"
 PASSWORD="xglq gsxu dptv izra"
+RAZORPAY_KEY_ID=rzp_test_b2b3Y59oVOxWMb
+RAZORPAY_KEY_SECRET=J2Csz2gmspELhOOcFxcGWiKQ
