--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdfkit": "^0.15.0",
+    "razorpay": "^2.9.4",
     "socket.io": "^4.5.4",
     "twilio": "^5.0.4",
     "validator": "^13.11.0"
