--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "bootstrap-icons": "^1.11.3",
     "git-filter-repo": "^0.0.30",
     "json2csv": "^6.0.0-alpha.2",
     "leaflet": "^1.9.4",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.42.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
