added the Live emisson video

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.3",
     "git-filter-repo": "^0.0.30",
     "json2csv": "^6.0.0-alpha.2",
     "leaflet": "^1.9.4",
@@ -16,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
