--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -21,10 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
-  "serviceworker": {
-    "src": "service-worker.js",
-    "scope": "/",
-    "update_via_cache": "all"
-  }
+  "background_color": "#ffffff"
 }
