--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && workbox injectManifest",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "workbox-cli": "^7.1.0"
   }
 }
