--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
     "react-modal": "^3.16.1",
+    "react-native-video": "^6.4.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
