--- a/client/package.json
+++ b/client/package.json
@@ -23,15 +23,17 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-map-gl": "^7.1.7",
     "react-modal": "^3.16.1",
     "react-native-video": "^6.4.3",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
+    "reactstrap": "^9.2.2",
     "recharts": "^2.1.12",
     "rsuite": "^5.40.0",
     "web-vitals": "^2.1.4"
