--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-map-gl": "^7.1.7",
