--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
