--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.2.4",
     "mqtt": "^5.5.5",
     "multer": "^1.4.5-lts.1",
