--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "git-filter-repo": "^0.0.30",
     "json2csv": "^6.0.0-alpha.2",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "mongoose-gridfs": "^1.3.0",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.0",
