--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,11 @@
     "react-map-gl": "^7.1.7",
     "react-modal": "^3.16.1",
     "react-native-video": "^6.4.3",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.2",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
