--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@vonage/server-sdk": "^3.15.0",
+    "async-mutex": "^0.5.0",
     "aws-iot-device-sdk": "^2.2.13",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
