lots of update as done in average hourlyEnergyFlow and consumption data prediction also chat with upload file , exceed color and timeinterval color automatically mail send with the current day data

--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.4.6",
     "git-filter-repo": "^0.0.30",
+    "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
+    "react-d3-speedometer": "^2.2.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
